Update image due to permissions

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
               <div class="card mt-2">
                 <img
                   class="card-img-top"
-                  src="https://colombia.travel/sites/default/files/PROCO_Banner_Cartagena_murallas_01.png"
+                  src="https://upload.wikimedia.org/wikipedia/commons/5/51/Las_Murallas%2C_the_walls_of_Cartagena%2C_Colombia_%2824216310329%29.jpg"
                   alt="Card image cap"
                 />
                 <div class="card-body">
